[tool.ruff]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = ["ruff", "pytest"]

[project]
name = "task-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
py-modules = []
packages = ["app", "alembic", "env", "tests"]

[tool.uv]
package = true